src/objects/CRMfusionDBR101__AutoMerge_Mapping__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Include_in_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether or not this field should be included in the task created from the merge containing data from the original record.</inlineHelpText>
        <label>Include in Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Key__c</fullName>
        <description>Internal key for upserting.  This is just &lt;scenario Id&gt;_&lt;field API name&gt;</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Merge_Action__c</fullName>
        <inlineHelpText>This is the action taken for this field when automatically merging a new record into an existing record.  See the documentation for a full description.</inlineHelpText>
        <label>Merge Action</label>
        <picklist>
            <picklistValues>
                <fullName>Ignore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update if Blank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overwrite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge Values</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Merge_Field_Display__c</fullName>
        <inlineHelpText>Select a field to define the merge action and over-ride the default merge action and/or include in task options.</inlineHelpText>
        <label>Merge Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Merge_Field__c</fullName>
        <inlineHelpText>Select a field to define the merge action and over-ride the default merge action and/or include in task options.</inlineHelpText>
        <label>Merge Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipLabel>DupeBlocker Auto-Merge Mappings</relationshipLabel>
        <relationshipName>AutoMerge_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DupeBlocker Auto-Merge Mapping</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>DupeBlocker Auto Merge Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Auto-Merge Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRMfusionDBR101__Merge_Action_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( TEXT( CRMfusionDBR101__Merge_Action__c ) ), TEXT( CRMfusionDBR101__Merge_Action__c ) == &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Merge_Action__c</errorDisplayField>
        <errorMessage>The Merge Action must be specified.</errorMessage>
    </validationRules>
</CustomObject>